# AES-mini

./: CMakeLists.txt  Makefile  README.md  aes.h  decrypt.asm  decrypt.s  encrypt.asm  main.c
